<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/upperHalfUserDetail"
            tools:context=".activities.UserDetailActivity">

            <ProgressBar
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/detailUserProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.386"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="210dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="205dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="107dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="146dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="434dp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_username"
                    app:layout_constraintEnd_toStartOf="@id/guideline7"
                    app:layout_constraintHorizontal_bias="0.129"
                    app:layout_constraintStart_toEndOf="@id/iv_avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="name" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/guideline7"
                    app:layout_constraintHorizontal_bias="0.14"
                    app:layout_constraintStart_toEndOf="@id/iv_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:text="username" />

                <TextView
                    android:id="@+id/label_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories_lbl"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/label_following"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <TextView
                    android:id="@+id/label_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12sp"
                    android:text="@string/following_lbl"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/label_followers"
                    app:layout_constraintStart_toEndOf="@id/label_repositories"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <TextView
                    android:id="@+id/label_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/followers_lbl"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/label_following"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="70dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/guideline6"
                    app:layout_constraintEnd_toStartOf="@+id/tv_following"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_repositories"
                    app:layout_constraintVertical_bias="1.0"
                    tools:text="0" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/guideline6"
                    app:layout_constraintEnd_toStartOf="@id/tv_followers"
                    app:layout_constraintHorizontal_bias="0.511"
                    app:layout_constraintStart_toEndOf="@id/tv_repository"
                    app:layout_constraintTop_toBottomOf="@id/label_following"
                    tools:text="0" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="76dp"
                    android:layout_marginEnd="40dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/guideline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_following"
                    app:layout_constraintTop_toBottomOf="@id/label_followers"
                    tools:text="0" />

                <TextView
                    android:id="@+id/label_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location_lbl"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline6" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.008"
                    app:layout_constraintStart_toEndOf="@id/label_location"
                    app:layout_constraintTop_toBottomOf="@id/guideline6"
                    tools:text="location" />

                <TextView
                    android:id="@+id/label_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_lbl"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.008"
                    app:layout_constraintStart_toEndOf="@id/label_company"
                    app:layout_constraintTop_toBottomOf="@id/tv_location"
                    tools:text="company" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tabTextColor="@android:color/white"
                    app:tabIndicatorColor="@android:color/holo_red_dark"
                    app:layout_constraintTop_toTopOf="@id/guideline1" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tab_layout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


